--- a/assets/towns/town1/scalingConfig.json
+++ b/assets/towns/town1/scalingConfig.json
@@ -5,8 +5,8 @@
   "assets/towns/town1/houses/Building Red Corner.glb": 2,
   "assets/towns/town1/houses/Building Red.glb": 2,
   "assets/towns/town1/houses/Greenhouse.glb": 0.325,
+  "assets/towns/town1/props/Bus Stop.glb": 0.049,
   "assets/towns/town1/trees/Flower Pot-Kgt363WkKd.glb": 0.135,
   "assets/towns/town1/trees/Flower Pot.glb": 0.138,
-  "assets/towns/town1/trees/Tree.glb": 0.005,
-  "assets/towns/town1/props/Bus Stop.glb": 0.049
+  "assets/towns/town1/trees/Tree.glb": 0.005
 }
